objects/AIA_Docusign_Approval_Response__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIA Document</label>
        <referenceTo>AIA_Document__c</referenceTo>
        <relationshipName>AIA_Document_Approval_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <formula>Owner:User.FirstName + ' ' +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_to_be_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the business area that requires the response.</inlineHelpText>
        <label>Business Area to be Approved</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_to_Approve__c</fullName>
        <formula>If(ISBLANK(Response_Date__c), Today() - DATEVALUE(CreatedDate), Response_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days to Approve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The day the response was submitted.</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>AIA custom object for capturing the approval responses related to Docusign - custom document approval process.</description>
    <label>AIA Docusign Approval Response</label>
    <nameField>
        <displayFormat>DAR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AIA Docusign Approval Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DAP001</fullName>
        <active>true</active>
        <description>If the response is Rejected then make sure they enter a reason in the Comments field.</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp;(ISPICKVAL( Response__c , 'Reject') &amp;&amp; (ISNULL( Comments__c ) || ISBLANK(Comments__c)))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>DAP001:Please enter a comment for the rejected response</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DAR002</fullName>
        <active>true</active>
        <description>Only assigned user should be able to update the response</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp;( ISCHANGED( Response__c )&amp;&amp;   $User.Id != OwnerId &amp;&amp; $Profile.Name != 'System Administrator 2FA - custom' &amp;&amp; $Profile.Name != 'System Administrator' )</errorConditionFormula>
        <errorMessage>DAR002: You are not authorized to change the response to this record</errorMessage>
    </validationRules>
</CustomObject>